MilestoneRFAFullSandBox/src/objects/CM_FinalApprovalMailDestination__c.object
<CustomObject>
    <description>Final approval mail destination
最終承認メール送信先</description>
    <fields>
        <fullName>CM_FinalApprovalMailGroup__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Final approval mail sending group</label>
        <referenceTo>CM_FinalApprovalMailGroup__c</referenceTo>
        <relationshipLabel>Final approval mail destinations</relationshipLabel>
        <relationshipName>CM_FinalApprovalMailGroup2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CM_Group_Name__c</fullName>
        <formula>CM_FinalApprovalMailGroup__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Group Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CM_RFA__c</fullName>
        <label>RFA</label>
        <referenceTo>RFA__c</referenceTo>
        <relationshipLabel>Final approval mail destinations</relationshipLabel>
        <relationshipName>CM_RFA_DestinationGroup</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <label>最終承認メール送信先</label>
    <nameField>
        <displayFormat>G-{000000000}</displayFormat>
        <label>No.</label>
        <type>AutoNumber</type>
    </nameField>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>